<resources>
    <string name="app_name">GoodFood</string>
    <string name="app_logo_desc">App logo</string>
    <string name="change_password">Change Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="google_login">Google login</string>
    <string name="search_button">Search button</string>
    <string name="search">Search...</string>
    <string name="order_context_menu">Order context menu</string>
    <string name="order_resume">Order Resume</string>
    <string name="distance_from_restaurant">Distance from restaurant:</string>
    <string name="final_price">Final price:</string>
    <string name="finalize_and_pay">Finalize and pay</string>
    <string name="cancel_order">Cancel order</string>
    <string name="address">Address:</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="estimated_time">Estimated time:</string>
    <string name="enjoy_meal_msg">We hope you enjoy your meal</string>
    <string name="order_successfully_done">Order Successfully Done</string>
    <string name="deliver_guy_gif">Deliver guy gif</string>
    <string name="full_name">Full name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="restaurant_name">RESTAURANT NAME</string>
    <string name="restaurant_logo">Restaurant logo</string>

    <string name="default_user_address">Try again</string>

    <string name="required_name_error">Full name is required!</string>
    <string name="required_email_error">Email is required!</string>
    <string name="invalid_email_error">Enter a valid email!</string>
    <string name="required_password_error">Password is required!</string>
    <string name="incorrect_password_length_error">Min password length must be 8 characters!</string>
    <string name="non_equals_password_error">Password and confirmed password must be equal</string>
    <string name="check_your_email">Check your email to verify account and try to login again</string>
    <string name="check_reset_email">Check your email to reset your password</string>
    <string name="reset_error">Enter an already registered email!</string>
    <string name="loading_restaurant_error">Couldn\'t load restaurants try again later</string>
    <string name="credentials_error">Failed to login! Check credentials</string>
    <string name="register_error">Failed to Register!</string>
    <string name="order_error">Oops something went wrong, try again later</string>

    <string name="no_error">ALL CORRECT</string>
    <string name="successfully_registered">User has been registered successfully!</string>
    <string name="successfully_updated">User name has been updated successfully!</string>
    <string name="successfully_order">Order has been completed successfully!</string>
    <string name="plate">Plate:</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>
    <string name="total_price">Total price: </string>
    <string name="complete_order">Complete order</string>

    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="exit_confirmation">Do you really want to exit? You will lose your order!</string>
    <string name="restaurant_confirmation">Do you really want to see other restaurant? You will lose your order!</string>
    <string name="yes_confirmation">Yes</string>
    <string name="no_confirmation">No</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="order_summary">Order Summary</string>
    <string name="cant_pay_for_nothing">You can\'t pay for nothing!!</string>
    <string name="finalize_order_error">An error occurred try to make the order again</string>

    <string name="plate_img">Plate_img</string>
    <string name="money">€</string>
    <string name="refresh_address_info">Refresh address info</string>
    <string name="enter_the_deliver_address">Enter the deliver address</string>
    <string name="km">km</string>
    <string name="equal">=</string>
    <string name="add">+</string>
    <string name="money_deliver">€ (deliver)</string>
    <string name="terms_advice">By registering we assume that you accept our terms and conditions</string>
    <string name="change_name">Change Name</string>
    <string name="introduce_your_new_name">Introduce your new name</string>
    <string name="enter_your_new_name">Enter your new name</string>
    <string name="change_user_data">Change user data</string>
    <string name="make_an_order">Make an order</string>

</resources>