<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.changedata.ChangeDataActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="70dp" />

        <LinearLayout
            android:id="@+id/logo_layout"
            android:layout_width="282dp"
            android:layout_height="170dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_logo_desc"
                android:src="@drawable/goodfoodlogo" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <EditText
            android:id="@+id/new_name_et"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_new_name"
            android:inputType="textPersonName"
            android:paddingHorizontal="5dp"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/change_password_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password" />

            <Button
                android:id="@+id/change_fullname_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_name" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>