<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.login.LoginActivity"
    android:background="#FCEABA"
    >



    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="70dp" />

        <LinearLayout
            android:id="@+id/logo_layout"
            android:layout_width="282dp"
            android:layout_height="170dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_logo_desc"
                android:src="@drawable/goodfoodlogo" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:id="@+id/input_layout"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight=".55"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:gravity="center|center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/login_user_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".55"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:gravity="center|center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cardview_dark_background"

                android:text="@string/login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="fill_horizontal"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/forgot_password_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/forgot_your_password"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/register_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/register"
                    android:textAlignment="textEnd"
                    android:textSize="13sp" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:id="@+id/google_layout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/google_login"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/google_login"
                android:src="@drawable/common_google_signin_btn_icon_dark" />
        </LinearLayout>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main" />

</androidx.constraintlayout.widget.ConstraintLayout>