<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <LinearLayout
            android:id="@+id/logo_layout"
            android:layout_width="282dp"
            android:layout_height="170dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_logo_desc"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:id="@+id/input_layout"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/register_user_email"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints="" />

            <EditText
                android:id="@+id/register_user_password"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:autofillHints="" />

            <EditText
                android:id="@+id/register_user_pass_confirm"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/corfirm_your_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>